# DiscographyID3Editor

./: .gitignore  .gitmodules  Readme.md  download_playlists.bat
Documentation/Installation/Windows/: Visual Studio.txt
Documentation/Project Architecture/: Notes.txt  Project Overview.drawio
Project/: CMakeBuild.py  CMakeLists.txt  application.cpp  application.hpp  main.cpp
Project - POC/: CMakeLists.txt
Project - POC/app/: CMakeLists.txt
Project - POC/file_system/: itf_file_system.cpp
Project - POC/id3_editor/: CMakeLists.txt  itf_id3_editor.cpp
Project - POC/lib/: CMakeLists.txt
Project - POC/lib/file_system/: itf_file_system.hpp
Project - POC/lib/file_system/boost/: boost_file_system.cpp  boost_file_system.hpp
Project - POC/lib/id3_editor/: CMakeLists.txt
Project - POC/lib/id3_editor/taglib/: taglib_id3_editor.cpp  taglib_id3_editor.hpp
Project/app/: CMakeLists.txt  app.cpp  app.hpp  file_system.cpp  file_system.hpp
Project/application/: CMakeLists.txt  main.cpp
Project/file_system/: CMakeLists.txt  itf_file_system.cpp
Project/id3_editor/: itf_id3_editor.cpp  itf_id3_editor.hpp
Project/id3_editor/taglib/: taglib_id3_editor.cpp
Project/lib/: CMakeLists.txt
Project/lib/id3_editor/: CMakeLists.txt
Project/lib/id3_editor/taglib/: CMakeLists.txt  id3_editor.cpp  id3_editor.hpp
Project/lib/printer/: CMakeLists.txt  itf_printer.cpp  itf_printer.hpp
Project/lib/printer/math/: math_printer.cpp  math_printer.hpp
Project/lib_new/id3_editor/: itf_id3_editor.hpp
Project/lib_new/id3_editor/taglib/: taglib_id3_editor.cpp  taglib_id3_editor.hpp
Project/script/: Build_Project.py  Compile_Project.py  TagLib_Setup.py
Project_POC/: CMakeBuild.py  CMakeLists.txt  main.cpp
Project_POC/app/: app.cpp  app.hpp
Project_POC/lib/file_system/: CMakeLists.txt
Project_POC/lib/id3_editor/: CMakeLists.txt
Project_POC/lib/id3_editor/taglib/: CMakeLists.txt  id3_editor.cpp  taglib_id3_editor.cpp  taglib_id3_editor.hpp
youtube-dl/: Readme.md  Setup.py  download_playlists.bat  download_playlists.py  playlists.txt
yt-dlp/: Readme.txt  download_playlists.bat  playlists.txt
